[package]
name = "hdk_unit_testing"
description = "Functions to help make mocking HDK native functions easier. Not complete, this is a work in progress"
license = "GPL-2.0"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdk = "0.0.134"

[features]
default = ["mock"]
mock = ["hdk/mock", "hdk/test_utils"]